# ConsoleAPI

./: CMakeLists.txt  README.md
docs/: console_api.md
inc/: console_api.h
src/: console_api.common.h  console_cleanup.c  console_clear.c  console_data.c  console_init.c  console_input.c  console_keys.c  console_menu.c  console_style.c
